--- a/scss/master.scss
+++ b/scss/master.scss
@@ -22,7 +22,7 @@ body{
 .logo:hover{
     cursor: pointer; 
  }
- 
+
 .header{
     @include flexProp(flex-start, center);
     flex-flow: wrap;
@@ -49,18 +49,18 @@ body{
     @include singleImgProp($introImage, no-repeat, cover);
     flex-flow: column;
     width: 100%;
-    height: 60vh;
    
     p{
         padding: 0vw;
         width: 50%;
+        
     }
 
     button{
         background-color: #ff9000;
         @include textProp(normal, #e1e1e1, bold, center);
         width: 20vw;
-        height: 45px;
+        height: 5vh;
         border-radius: 20px;
         box-shadow: #fff 0px 0px 10px;
     }
@@ -102,6 +102,7 @@ button:hover{
 
 .introContainer{
     @include flexProp(center, center);
+    flex-direction: column;
     width: 100vw;
     height: 30vh;
     text-align: center;
@@ -109,10 +110,11 @@ button:hover{
 
 .cardContainer{
     @include flexProp(center, center);
-    flex-flow: wrap column;
+    flex-flow: column wrap;
     justify-content: space-around;
     width: 100vw;
     height: 100vh;
+    margin-top: 10vh;
     margin-bottom: 10vh;
 }
 
@@ -121,6 +123,23 @@ button:hover{
     height: 45vh;
     background-color: #e1e1e1;
     color: #000;
+    
+
+    h3,p{
+        width: auto;
+        height: auto;
+        margin: 10px;
+    }
+    ul{
+        margin-left: -10px;
+    }
+    
+}
+
+.cardImg{
+    width: 100%;
+    height: 35%;
+    background-color: grey;
 }
 
 .note{
