--- a/scss/style.css
+++ b/scss/style.css
@@ -49,7 +49,6 @@ body {
   background-repeat: no-repeat;
   flex-flow: column;
   width: 100%;
-  height: 60vh;
 }
 .introContainer p {
   padding: 0vw;
@@ -62,7 +61,7 @@ body {
   font-weight: bold;
   text-align: center;
   width: 20vw;
-  height: 45px;
+  height: 5vh;
   border-radius: 20px;
   box-shadow: #fff 0px 0px 10px;
 }
@@ -101,6 +100,7 @@ button:hover {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   width: 100vw;
   height: 30vh;
   text-align: center;
@@ -110,10 +110,11 @@ button:hover {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-flow: wrap column;
+  flex-flow: column wrap;
   justify-content: space-around;
   width: 100vw;
   height: 100vh;
+  margin-top: 10vh;
   margin-bottom: 10vh;
 }
 
@@ -122,6 +123,20 @@ button:hover {
   height: 45vh;
   background-color: #e1e1e1;
   color: #000;
+}
+#cards h3, #cards p {
+  width: auto;
+  height: auto;
+  margin: 10px;
+}
+#cards ul {
+  margin-left: -10px;
+}
+
+.cardImg {
+  width: 100%;
+  height: 35%;
+  background-color: grey;
 }
 
 .note {
