--- a/client/scss/master.scss
+++ b/client/scss/master.scss
@@ -61,12 +61,12 @@ body{
     }
 
     button{
-        background-color: #ff9000;
+        background-color: #df7e00;
         @include textProp(normal, #e1e1e1, bold, center);
         width: 20vw;
         height: 5vh;
         border-radius: 20px;
-        box-shadow: #fff 0px 0px 10px;
+        box-shadow: rgb(167, 167, 167) 0px 0px 10px;
     }
     button:active{
         transform: translateY(4px);
@@ -138,7 +138,7 @@ button:hover{
 }
 
 .cards:hover{
-    transform: scale(1.15, 1.15);
+    transform: scale(1.05, 1.05);
     
 }
 
