--- a/views/pages/forms.ejs
+++ b/views/pages/forms.ejs
@@ -30,6 +30,8 @@
 <body>
     <div class="newEx">
         <form action="/postexercise" method="POST">
+            <label for="">Area of Exercise</label>
+            <input name="area" type="text" placeholder="biceps, back, quads etc">
             <label for="">Exercise Name:</label>
             <input name="exerciseName" type="text" placeholder="Ex. Lat pulldowns"><br>
             <label for="">Strenght Sets and Reps:</label>
